--- a/client/index.html
+++ b/client/index.html
@@ -32,7 +32,7 @@
     <link rel="stylesheet" href="http://jtblin.github.io/angular-chart.js/dist/angular-chart.css" />
     <script src="http://jtblin.github.io/angular-chart.js/bower_components/Chart.js/Chart.js"></script>
     <script src="http://jtblin.github.io/angular-chart.js/dist/angular-chart.js"></script>
-
+        <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.css">
 
     <!-- endbower -->
     <!-- endbuild -->
@@ -40,7 +40,8 @@
     <!-- build:css(client) app/vendor.css -->
 
       <!-- bower:css -->
-      <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css" />
+             <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css" />
+
       <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,client}) app/app.css -->
@@ -173,7 +174,14 @@
     <script src="assets/js/plugins/morris/morris-data.js"></script>
 
     <script src="assets/js/plugins/moment/min/moment.min.js"></script>
-    <script src="assets/js/plugins/angular-bootstrap-calendar/dist/js/angular-bootstrap-calendar-tpls.min.js"></script>
+    <script src="assets/js/plugins/angular-bootstrap-calendar/dist/js/angular-bootstrap-calendar-tpls.min.js"></script><!-- Angular Material Dependencies -->
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script> 
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-animate.min.js"></script> 
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-aria.min.js"></script> 
+    <script src="../bower_components/angular-filter/dist/angular-filter.min.js"></script>
+    
+    <!-- Angular Material Javascript now available via Google CDN; version 0.9.4 used here -->
+    <script src="//ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script> 
 </body>
 
 </html>
