Ajeitando tabela de jogos
Summary:
Merge branch 'master' of https://github.com/andreldsa/UFCG-Sports

Admin deve ter acesso ao histório de reservas de cada usuário

Test Plan: nada

Reviewers: rafael

Differential Revision: http://andreabrantes.ddns.net/D23

--- a/client/index.html
+++ b/client/index.html
@@ -51,8 +51,8 @@
       <link rel="stylesheet" href="app/main/main.css">
       <link rel="stylesheet" href="app/post/post.css">
       <link rel="stylesheet" href="app/property/property.css">
-      <link rel="stylesheet" href="app/reserva_pendente/client.css">
       <link rel="stylesheet" href="app/reserva/client.css">
+      <link rel="stylesheet" href="app/reserva_pendente/client.css">
       <link rel="stylesheet" href="app/sale/sale.css">
       <link rel="stylesheet" href="app/user/user.css">
       <link rel="stylesheet" href="components/modal/modal.css">
@@ -118,6 +118,8 @@
     <script src="app/externalapp/externalapp.controller.js"></script>
     <script src="app/externalapp/externalapp.create.controller.js"></script>
     <script src="app/externalapp/externalapp.js"></script>
+    <script src="app/historico/historico.controller.js"></script>
+    <script src="app/historico/historico.js"></script>
     <script src="app/horario/calendario.controller.js"></script>
     <script src="app/horario/horario.controller.js"></script>
     <script src="app/horario/horario.js"></script>
@@ -137,16 +139,16 @@
     <script src="app/property/property.update.controller.js"></script>
     <script src="app/recurso/recurso.controller.js"></script>
     <script src="app/recurso/recurso.js"></script>
-    <script src="app/reserva_pendente/reserva_pendente.controller.js"></script>
-    <script src="app/reserva_pendente/reserva_pendente.create.controller.js"></script>
-    <script src="app/reserva_pendente/reserva_pendente.js"></script>
-    <script src="app/reserva_pendente/reserva_pendente.show.controller.js"></script>
-    <script src="app/reserva_pendente/reserva_pendente.update.controller.js"></script>
     <script src="app/reserva/reserva.controller.js"></script>
     <script src="app/reserva/reserva.create.controller.js"></script>
     <script src="app/reserva/reserva.js"></script>
     <script src="app/reserva/reserva.show.controller.js"></script>
     <script src="app/reserva/reserva.update.controller.js"></script>
+    <script src="app/reserva_pendente/reserva_pendente.controller.js"></script>
+    <script src="app/reserva_pendente/reserva_pendente.create.controller.js"></script>
+    <script src="app/reserva_pendente/reserva_pendente.js"></script>
+    <script src="app/reserva_pendente/reserva_pendente.show.controller.js"></script>
+    <script src="app/reserva_pendente/reserva_pendente.update.controller.js"></script>
     <script src="app/sale/sale.controller.js"></script>
     <script src="app/sale/sale.create.controller.js"></script>
     <script src="app/sale/sale.js"></script>
