--- a/client/index.html
+++ b/client/index.html
@@ -7,12 +7,6 @@
 <!--<![endif]-->
 
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <base href="/">
-    <title></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
     <!--[if lt IE 9]>
     <script src="bower_components/es5-shim/es5-shim.js"></script>
     <script src="bower_components/json3/lib/json3.min.js"></script>
@@ -29,16 +23,24 @@
     <script src="../bower_components/lodash/dist/lodash.compat.js"></script>
     <script src="../bower_components/flow.js/dist/flow.js"></script>
     <script src="../bower_components/ng-flow/dist/ng-flow.js"></script>
-    <script src="../bower_components/Chart.js/dist/Chart.js"></script>
-        <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.css">
+    <link rel="stylesheet" href="http://jtblin.github.io/angular-chart.js/dist/angular-chart.css" />
+    <script src="http://jtblin.github.io/angular-chart.js/bower_components/Chart.js/Chart.js"></script>
+    <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.css">
+    <script src="http://jtblin.github.io/angular-chart.js/dist/angular-chart.js"></script>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <base href="/">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width">
+
     <!-- endbower -->
     <!-- endbuild -->
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(client) app/vendor.css -->
 
       <!-- bower:css -->
-             <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css" />
-
+      <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css" />
       <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,client}) app/app.css -->
@@ -180,7 +182,7 @@
     <script src="../bower_components/angular-filter/dist/angular-filter.min.js"></script>
     
     <!-- Angular Material Javascript now available via Google CDN; version 0.9.4 used here -->
-    <script src="//ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script> 
+    <script src="//ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script>
 </body>
 
 </html>
