--- a/client/app/reserva/reserva.index.html
+++ b/client/app/reserva/reserva.index.html
@@ -1,3 +1,10 @@
+<div class="row has-error help-block" style="color: rgb(240,240,230);" ng-show="requirePhone()">
+	<ul class="list-group-item" style="background-color: rgb(0,187,255)">
+	    <form class="form" name="form" ng-submit="addPhone(form)" novalidate>
+	    	<label>Telefone para contato: </label> <input type="text" name="descricao" class="form-control"	ng-model="phone" required />
+    	</form>
+	</ul>
+</div>
 <div class="row">
 	<ul class="list-group">
 		<li class="list-group-item" ng-show="noClients()"><strong>Nenhuma reserva cadastrada</strong><br></li>
