--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,7 +1,6 @@
 <div class="alert alert-info" ng-show="temReserva && !isAdmin">
   <strong>Sua próxima reserva é em {{dataUltimaReserva}} às {{ultimaReserva.hora}} horas em {{ultimaReserva.recurso}}</strong> 
 </div>
-
 <div class="row" >
     <div class="col-lg-12">
         <h1 class="page-header">
@@ -121,18 +120,7 @@
 <!-- /.row -->
 <div class="row">
     <div class="col-lg-12">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h3 class="panel-title"><i class="fa fa-bar-chart-o fa-fw"></i> Area Chart</h3>
-            </div>
-            <div class="panel-body">
-<!--                 <canvas id="bar" class="chart chart-bar"
-                  chart-data="data" chart-labels="labels"> chart-series="series"
-                </canvas
-            </canvas>
-            <div id="legendDiv"></div> -->
-            </div>
-        </div>
+        <iframe id="forecast_embed" type="text/html" frameborder="0" height="245" width="100%" src="http://forecast.io/embed/#lat=7.2428&lon=-35.9716&name=Campina Grande&color=#00aaff&font=Helvetica&units=uk"> </iframe>
     </div>
 </div>
 <!-- /.row -->
