--- a/client/app/reserva_pendente/reserva_pendente.update.html
+++ b/client/app/reserva_pendente/reserva_pendente.update.html
@@ -1,77 +1,17 @@
-
-<!-- <div ng-include="'components/navbar/navbar.html'"></div> -->
-<div class="container">
-	<div class="row">
-		<div class="col-sm-12">
-			<h1>Editar reserva pendente</h1>
-		</div>
-		<div class="col-sm-12">
-			<form class="form" name="form" ng-submit="save(form)" novalidate>
-				<div class="form-group"
-	ng-class="{ 'has-success': form.name.$valid && submitted,
-                                            'has-error': form.name.$invalid && submitted }">
-	<label>Nome</label> <input ng-readonly="readOnly" type="text" name="name" class="form-control"
-		ng-model="reserva_pendente.nome" required />
-	<p class="help-block" ng-show="form.name.$error.required && submitted">A
-		Nome é obrigatório</p>
-</div>
-
-<div class="form-group"
-	ng-class="{ 'has-success': form.email.$valid && submitted,
-                                            'has-error': form.email.$invalid && submitted }">
-	<label>Email</label> <input ng-readonly="readOnly" type="email" name="email"
-		class="form-control" ng-model="reserva_pendente.email" required
-		mongoose-error />
-	<p class="help-block" ng-show="form.email.$error.email && submitted">
-		Não parece com um email válido.</p>
-	<p class="help-block" ng-show="form.email.$error.required && submitted">Qual é o seu endereço de email?</p>
-	<p class="help-block" ng-show="form.email.$error.mongoose">{{errors.email }}</p>
-</div>
-
-<div class="form-group"
-	ng-class="{ 'has-success': form.name.$valid && submitted,
-                                            'has-error': form.name.$invalid && submitted }">
-	<label>Instalação esportiva</label> <input type="text" name="name" class="form-control" ng-model="reserva_pendente.recurso" required/>
-	<p class="help-block" ng-show="form.name.$error.required && submitted">A
-		Instalação esportiva é obrigatório</p>
-</div>
-
-
-<div > 
-	<div style="float: left;">
-		<label>Data</label> 
-		<input type = "date" name = "data" id ="data" ng-model="reserva_pendente.data" required/> <br/> 
-	</div>
-
-	<div style="float: right, position: relative;">
-		<label>Horário</label> 
-		<input type=number min=6 max=20 style="height: 40px;" ng-model="reserva_pendente.hora" required> 
-
-		</p><div class="input-group">
-        	  <span class="input-group-btn">
-              	<button type="button" class="btn btn-danger btn-number"  ng-click="diminuiCount()">
-                <span class="glyphicon glyphicon-minus"></span>
-              	</button>
-          	  </span>
-          	<input type="text" name="quant[2]" class="form-control input-number" ng-model="reserva_pendente.qtdPessoas" min="1" max="100">
-          <span class="input-group-btn">
-              <button type="button" class="btn btn-success btn-number" ng-click="aumentaCount()" data-type="plus" data-field="quant[2]">
-                  <span class="glyphicon glyphicon-plus"></span>
-              </button>
-          </span>
-      </div>
-	<p></p>
-</div>
-</div>
-
-<br></br>
-				<div>
-					<button class="btn btn-success btn-lg btn-login" type="submit">
-						Salvar</button>
-					<a href="/reserva_pendente" class="btn btn-danger btn-lg"> Cancelar </a>
-				</div>
-			</form>
-		</div>
-	</div>
-	<hr>
+<div class="row">
+    <div class="col-sm-12">
+        <h1>Editar Reserva Pendente</h1>
+    </div>
+    <div class="col-sm-12">
+        <fieldset>
+            <form class="form" name="form" ng-submit="save(form)" novalidate>
+                <div ng-include src="'app/reserva_pendente/reserva_pendente.form.html'"></div>
+                <div>
+                    <button class="btn btn-success btn-lg btn-login" type="submit">
+                        Salvar</button>
+                    <a href="/reserva_pendente" class="btn btn-danger btn-lg"> Cancelar </a>
+                </div>
+            </form>
+        </fieldset>
+    </div>
 </div>
