--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,12 @@
 <!--<![endif]-->
 
 <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <base href="/">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width">
     <!--[if lt IE 9]>
     <script src="bower_components/es5-shim/es5-shim.js"></script>
     <script src="bower_components/json3/lib/json3.min.js"></script>
@@ -57,6 +63,11 @@
     <!-- Custom Fonts -->
     <link href="assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="assets/js/plugins/angular-bootstrap-calendar/dist/css/angular-bootstrap-calendar.min.css" rel="stylesheet">
+
+    <link rel="stylesheet" href="http://jtblin.github.io/angular-chart.js/dist/angular-chart.css" />
+    <script src="http://jtblin.github.io/angular-chart.js/bower_components/Chart.js/Chart.js"></script>
+    <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.css">
+    <script src="http://jtblin.github.io/angular-chart.js/dist/angular-chart.js"></script>
 </head>
 
 <body ng-app="finalnodeApp">
