--- a/client/index.html
+++ b/client/index.html
@@ -70,7 +70,7 @@
     <script src="http://jtblin.github.io/angular-chart.js/dist/angular-chart.js"></script>
 </head>
 
-<body ng-app="finalnodeApp">
+<body ng-app="finalnodeApp" style="margin-top:60px;">
     <div id="wrapper">
         <!-- Navigation -->
         <div ng-include="'components/navbar/navbar.html'"></div>
